# ockam

implementations/elixir/ockam/ockam/: mix.exs
implementations/elixir/ockam/ockam/lib/ockam/transport/tcp/: listener.ex
implementations/elixir/ockam/ockam/test/ockam/: message_test.exs  router_test.exs
implementations/elixir/ockam/ockam/test/ockam/transport/tcp/: address_test.exs
implementations/elixir/ockam/ockam_vault_software/native/vault/software/: CMakeLists.txt
implementations/elixir/ockam/ockam_vault_software/test/: vault_software_test.exs
implementations/rust/ockam/ockam_node/src/: mailbox.rs
implementations/rust/ockam/ockam_vault/: Cargo.toml
tools/coverage/rust/: Dockerfile  build.sh  coverage.sh  run.sh
